css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');

:root {
    --DarkBlue: hsl(240, 37.9%, 20.2%);
    --GrayishBlue: hsl(240, 17.6%, 76.7%);
}

*, *::before, *::after {
    margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
    z-index: 0;
    box-sizing: border-box;
}

body {
    background-color: white;
    height: 100vh;
    background: url('../images/pattern-curve.svg') no-repeat bottom left;
}

.flex {
    display: flex;
    align-items: center;
    justify-content: center;
}


.quote-section {
    z-index: 1;
    margin: auto;
    margin-right: -400px;
    flex-basis: 44.1%;
    font-family: 'Inter', sans-serif;
    font-weight: 300;
    font-size: 32px;
    line-height: 1.375;
    color: var(--DarkBlue);
}

.quotes {
    margin-left: 95px;
    margin-bottom: -45px;
}

cite {
    font-weight: 500;
    font-size: 20px;
    line-height: 1.9;
    color: var(--GrayishBlue);
    margin-top: 32px;
}

em {
    font-weight: 700;
    color: var(--DarkBlue);
}


.portrait-section {
    margin: auto;
    flex-basis: 48.2%;
    height: 1040px;
    flex-direction: column;
    background: url('../images/pattern-bg.svg') no-repeat center;
}

.shadow {
    box-shadow: 0 15px 20px -10px hsla(240, 51.7%, 29.2%, 0.1);
}

.portrait {
    border-radius: 5px;
}

.button-container {
    background-color: white;
    width: 112px;
    height: 56px;
    border-radius: 28px;
    justify-content: space-evenly;
}

button {
    background-color: transparent;
}

button:hover {
    cursor: pointer;
}

